[package]
authors = ["Twilight Contributors"]
documentation = "https://twilight-rs.github.io/chapter_3_services/section_5_gateway_queue.html"
edition = "2018"
homepage = "https://github.com/twilight-rs/gateway-queue"
include = ["src/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-gateway-queue"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/gateway-queue.git"
version = "0.1.0"

[dependencies]
twilight-gateway = "0.1"
hyper = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", default-features = false, features = ["rt-core", "macros"] }

[profile.release]
lto = "thin"
