[package]
authors = ["Twilight Contributors"]
documentation = "https://twilight-rs.github.io/chapter_3_services/section_5_gateway_queue.html"
edition = "2018"
homepage = "https://github.com/twilight-rs/gateway-queue"
include = ["src/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-gateway-queue"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/gateway-queue.git"
version = "0.1.0"

[dependencies]
twilight-gateway-queue = "0.6"
twilight-http = "0.6"
hyper = { version = "0.14", default-features = false, features = ["http1", "server"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.2.20", default-features = false, features = ["env-filter", "ansi", "fmt"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
